tests/auto/qmlls/utils/data/highlights/invalid/highlightsShift_del5.qml
import QtQuick
Item {
    width: 100
    Rectangle
height: 100
    }
}
